--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "module_pf",
+  "name": "test",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.4.10"
+    "vite": "^6.0.1"
   },
   "dependencies": {
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
-    "gsap": "^3.12.5"
+    "gsap": "^3.12.5",
+    "lenis": "^1.1.18",
+    "swiper": "^11.1.15"
   }
 }
